prueba integracion wireframe

--- a/riveira.html
+++ b/riveira.html
@@ -7,6 +7,11 @@
     <title>este es un html</title>
 </head>
 <body>
-    
+    <h1>OLA KE ASSEEEE</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus dicta aliquid excepturi quo nihil delectus vel aliquam vero perferendis deleniti aperiam labore officia ullam architecto illum quisquam eum, nemo voluptas.
+    Atque id aut recusandae rerum provident facere nemo dolores ad suscipit voluptatibus vitae explicabo nobis officia quia consequuntur, accusamus odio voluptatum consequatur vero? Dignissimos vero corrupti non quaerat! Voluptatem, obcaecati.
+    Nesciunt nisi enim suscipit dolore<strong> animi hic </strong>. Illo repellendus nisi a ex obcaecati labore quod mollitia consectetur dolore fugit amet inventore voluptates quam in sit earum deserunt illum, provident esse.
+    Maxime, amet eum! Hic accusamus est sunt minima commodi quae et laborum officia! Dolorum consequuntur accusamus nam rerum libero dolore, eum, nulla similique corporis quidem blanditiis optio, ducimus quisquam fugit.
+    Omnis optio neque fugit in nostrum sunt fuga, delectus laboriosam corrupti eligendi, ab totam. Natus officiis blanditiis sed similique ex vitae tempora impedit, qui veniam ab, minima quibusdam, dignissimos sunt!</p>
 </body>
 </html>
